@@ -32,7 +32,7 @@ def test_get(flask_apm_client):
     assert 'request' in event['context']
     request = event['context']['request']
     assert request['url']['raw'] == 'http://localhost/an-error/?foo=bar'
-    assert request['url']['search'] == 'foo=bar'
+    assert request['url']['search'] == '?foo=bar'
     assert request['method'] == 'GET'
     assert request['body'] == None
     assert 'headers' in request
@@ -80,7 +80,7 @@ def test_post(flask_apm_client):
     assert 'request' in event['context']
     request = event['context']['request']
     assert request['url']['raw'] == 'http://localhost/an-error/?biz=baz'
-    assert request['url']['search'] == 'biz=baz'
+    assert request['url']['search'] == '?biz=baz'
     assert request['method'] == 'POST'
     assert request['body'] == 'foo=bar'
     assert 'headers' in request
